--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Chen Xi / Site Title"
+title                    : "Chen Xi / PhD Student"
 title_separator          : "-"
 name                     : &name "Chen Xi"
 description              : &description "personal description"
@@ -32,13 +32,9 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
-  scopus           : # URL
+  googlescholar    : "https://scholar.google.com.sg/citations?user=vL94RG0AAAAJ&hl=en"
+  orcid            : "https://orcid.org/my-orcid?orcid=0000-0003-4243-423X"
+  researchgate     : "https://www.researchgate.net/profile/Chen-Xi-22"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
