--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Chen Xi / PhD Student"
 title_separator          : "-"
 name                     : &name "Chen Xi"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://puying1994.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
