--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "ChenXi.png"
   name             : "Chen Xi"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "School of Materials Science and Engineering \nNanyang Technological University"
   location         : "Singapore"
   employer         : "Nanyang Technological University"
   uri              : # URL
