--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "ChenXi.png"
   name             : "Chen Xi"
   pronouns         : # example: "she/her"  
-  bio              : "School of Materials Science and Engineering \nNanyang Technological University"
+  bio              : "School of Materials Science and Engineering(MSE), Nanyang Technological University(NTU)"
   location         : "Singapore"
   employer         : "Nanyang Technological University"
   uri              : # URL
