--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "ChenXi.png"
-  name             : "Chen Xi"
+  name             : "Chen Xi (陈曦)"
   pronouns         : # example: "she/her"  
   bio              : "School of Materials Science and Engineering(MSE), Nanyang Technological University(NTU)"
   location         : "Singapore"
