--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Chen Xi / PhD Candidate"
 title_separator          : "-"
 name                     : &name "Chen Xi"
 description              : &description "personal description"
-url                      : https://puying1994.github.io
+url                      : https://chenxi.simuverse.top
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
