--- a/_config.yml
+++ b/_config.yml
@@ -220,7 +220,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
-
+  notes:
+    output: true
+    permalink: /:collection/:path/
 
 # These settings control how pages and collections are included in the site
 defaults:
@@ -277,7 +279,14 @@ defaults:
       layout: talk
       author_profile: true
       share: true
-
+  # _notes
+  - scope:
+      path: ""
+      type: notes
+    values:
+      layout: notes
+      author_profile: true
+      share: true
 
 # Sass/SCSS
 sass:
