--- a/_config.yml
+++ b/_config.yml
@@ -220,6 +220,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  notes:
+    output: true
+    permalink: /:collection/:path/
 
 # These settings control how pages and collections are included in the site
 defaults:
@@ -274,6 +277,14 @@ defaults:
       type: talks
     values:
       layout: talk
+      author_profile: true
+      share: true
+  # _notes
+  - scope:
+      path: ""
+      type: notes
+    values:
+      layout: single
       author_profile: true
       share: true
 
